--- a/style.css
+++ b/style.css
@@ -207,7 +207,21 @@ div#mainpage-search {
     margin-bottom: 0px;
 
 }
+div#source {
+  width: 100%;
+    height: 600px;
+    margin: 0 0 0 0;
+    padding: 0 0 0 100;
+    background-color: darkgray;
 
+}
+div#desc {
+    height: 600px;
+    margin-bottom: 0px;
+    margin-left: 10px;  
+    padding: 0 0 0 0;
+
+}
 div.mainpage-list a:hover{
     color: rgb(35, 82, 200);
 }
